# Folge_Accessibility

./: .env  .gitignore  PLAN-NICEGUI-GUI.md  README.md  _version.py  config.yaml  docx-accessibility.lua  gui.py  guide.enriched.json  guide.json  mkdocs.yml  pdf-accessibility.lua  pyproject.toml  run_pipeline.py
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml
docs/: configuration.md  contributing.md  getting-started.md  index.md  license.md  pdf-ua.md
docs/pipeline/: enrich.md  export.md  index.md  merge.md  publish.md  render.md  validate.md
docs/reference/: lua-filters.md  scripts.md
output/: __vision-results.json  manual-attention-needed.md
scripts/: batch_process.py  generate_manual_attention.py  merge.py  progress.py  publish.py  render.py  validate_content.py  validate_pdf.py  validate_schema.py
src/folge/: __init__.py  _version.py
src/folge/gui/: __init__.py  app.py  theme.py
src/folge/pipeline/: __init__.py  batch_process.py  cli.py  manual_attention.py  merge.py  prerequisites.py  progress.py  provider.py  publish.py  render.py  validate.py  validate_pdf.py
templates/: landscape.css  markdown.md  pagebreak.lua  prompt.txt
