[build-system]
requires = ["hatchling>=1.31"]
build-backend = "hatchling.build"

[project]
name = "folge-vision-pipeline"
dynamic = ["version"]
description = "Semi-Automated documentation publishing pipeline with Ollama Vision AI enrichment and PDF/UA-compliant output"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Michael Ryan Hunsaker, M.Ed., Ph.D." },
]
keywords = [
    "accessibility",
    "documentation",
    "pdf-ua",
    "wcag",
    "aria",
    "ollama",
    "vision-ai",
    "pandoc",
    "weasyprint",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "jsonschema>=4.17.0",
    "jinja2>=3.1.0",
    "requests>=2.28.0",
    "weasyprint>=60.0",
    "pymupdf>=1.23.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
    "Pillow>=10.0",
    "pyyaml>=6.0",
    "pypandoc>=1.17",
    "nicegui>=3.14",
    "catppuccin>=2.5",
]

[project.scripts]
folge-pipeline = "folge.pipeline.cli:main"
folge-gui = "folge.gui.app:main"

[project.urls]
Homepage = "https://github.com/mrhunsaker/Folge_Accessibility"
Repository = "https://github.com/mrhunsaker/Folge_Accessibility"
Issues = "https://github.com/mrhunsaker/Folge_Accessibility/issues"

[tool.hatch.version]
path = "src/folge/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/folge",
    "templates",
    "*.lua",
    "config.yaml",
    "mkdocs.yml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/folge"]
